load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["app.go"],
    importpath = "github.com/example/project/echo_server",
    visibility = ["//visibility:private"],
    deps = ["@com_github_labstack_echo_v4//:go_default_library"],
)

go_binary(
    name = "echo_server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
